--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="/js/javascript.js">
     <script src="https://kit.fontawesome.com/262eb30539.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="container">
         <section id="home" class="flex-colum flex-center">
-            <h1>¿Preparade?</h1>
+            <h1>¿Cuánto sabes de Harry Potter?</h1>
             <a href="/html/juego.html" class="juego">Juega</a>
             <a href="/html/highscores.html" class="juego" id="highscore-juego" class="juego" >High Scores <i class="fas fa-crown"></i></a>
         </section>
