--- a/html/juego.html
+++ b/html/juego.html
@@ -33,19 +33,19 @@
             </div>
             <h1 id="question">¿Cuál es la resupesta a la pregunta?</h1>
             <div class="choice-container">
-                <p class="elige-prefix">A</p>
+                <p class="elige-prefix"></p>
                 <p class="elige-texto" data-number="1">Elige</p>
             </div>
             <div class="choice-container">
-                <p class="elige-prefix">B</p>
+                <p class="elige-prefix"></p>
                 <p class="elige-texto" data-number="2">Elige 2</p>
             </div>
             <div class="choice-container">
-                <p class="elige-prefix">C</p>
+                <p class="elige-prefix"></p>
                 <p class="elige-texto" data-number="3">Elige 3</p>
             </div>
             <div class="choice-container">
-                <p class="elige-prefix">D</p>
+                <p class="elige-prefix"></p>
                 <p class="elige-texto" data-number="4">Elige 4</p>
             </div>
         </section>
