--- a/html/final.html
+++ b/html/final.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado Final</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/css/highscores.css">
     <script src="https://kit.fontawesome.com/262eb30539.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
@@ -20,9 +21,10 @@
                 <button class="juego" id="saveScoreJuego" type="submit" onclick="saveHighScore(event)" disabled>Guardar</button>
             </form>
             <a href="/html/juego.html" class="juego">Vuelve A Jugar</a>
-            <a href="/index.html" class="juego">Hogwarts<i class="fas -fa-home"></i></a>
+            <a href="/index.html" class="juego">Hogwarts<i class="fas fa-star"></i></a>
         </section>
     </main>
     <script src="/js/final.js"></script>
+    <script src="/js/highscores.js"></script>
 </body>
 </html>
