--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/css/estilos.css">
-    <link rel="stylesheet" href="/js/javascript.js">
+    <link rel="stylesheet" href="/js/juego.js">
     <script src="https://kit.fontawesome.com/262eb30539.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
