German the best

--- a/html/highscores.html
+++ b/html/highscores.html
@@ -15,7 +15,7 @@
     <main class="container">
         <section id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Clasificación</h1>
-            <url id="highScoreList"></url>
+            <p id="highScoreList" ></p>
             <a href="../index.html" class="juego">Hogwarst <i class="fa fa-star"></i></a>
         </section>
     </main>
