--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <main class="container">
         <section id="home" class="flex-colum flex-center">
             <h1>¿Cuánto sabes de Harry Potter?</h1>
-            <a href="/html/juego.html" class="juego">Juega</a>
-            <a href="/html/final.html"></a>
-            <a href="/html/highscores.html" class="juego" id="highscore-juego" class="juego" >High Scores <i class="fas fa-crown"></i></a>
+            <a href="./html/juego.html" class="juego">Juega</a>
+            <a href="./html/final.html"></a>
+            <a href="./html/highscores.html" class="juego" id="highscore-juego" class="juego" >High Scores <i class="fas fa-crown"></i></a>
         </section>
     </main>
     <script src="/js/juego.js"></script>
