añadiendo rutas de archivos correctamente

--- a/html/highscores.html
+++ b/html/highscores.html
@@ -19,6 +19,6 @@
             <a href="../index.html" class="juego">Hogwarst <i class="fa fa-star"></i></a>
         </section>
     </main>
-    <script src="/js/highscores.js"></script>
+    <script src="../js/highscores.js"></script>
 </body>
 </html>
