--- a/html/juego.html
+++ b/html/juego.html
@@ -50,6 +50,6 @@
             </div>
         </section>
     </main>
-    <script src="/js/juego.js"></script>
+    <script src="../js/juego.js"></script>
 </body>
 </html>
