--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="stylesheet" href="./css/highscores.css">
     <link rel="stylesheet" href="./css/juego.css">
     <script src="https://kit.fontawesome.com/262eb30539.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +22,8 @@
             <a href="./html/highscores.html" class="juego" id="highscore-juego" class="juego" >High Scores <i class="fas fa-crown"></i></a>
         </section>
     </main>
-    <script src="/js/juego.js"></script>
-    <script src="/js/highscores.js"></script>
-    <script src="/js/final.js"></script>
+    <script src="./js/juego.js"></script>
+    <script src="./js/highscores.js"></script>
+    <script src="./js/final.js"></script>
 </body>
 </html>
